# realis_regression

./: .gitignore  REALIS Regression.ipynb  pyproject.toml  readme.md
data/: 2015Q1_1.csv  2015Q1_1001.csv  2015Q1_2001.csv  2015Q2_1.csv  2015Q2_1001.csv  2015Q2_2001.csv  2015Q2_3001.csv  2015Q2_4001.csv  2015Q3_1001.csv  2015Q3_2001.csv  2015Q3_3001.csv  2015Q3_4001.csv  2015Q3_5001.csv  2015Q4_1.csv  2015Q4_1001.csv  2015Q4_2001.csv  2016Q1_1.csv  2016Q1_1001.csv  2016Q1_2001.csv  2016Q1_3001.csv  2016Q2_1.csv  2016Q2_1001.csv  2016Q2_2001.csv  2016Q2_3001.csv  2016Q2_4001.csv  2016Q2_5001.csv  2016Q3_1.csv  2016Q3_1001.csv  2016Q3_2001.csv  2016Q3_3001.csv  2016Q3_4001.csv  2016Q3_5001.csv  2016Q4_1.csv  2016Q4_1001.csv  2016Q4_2001.csv  2016Q4_3001.csv  2016Q4_4001.csv  2016Q4_5001.csv  2017Q1_1.csv  2017Q1_1001.csv  (+78 more)
