[project]
name = "workspace"
version = "0.1.0"
description = "REALIS scikit-learn regression experiment on Singapore real estate transaction data"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "scipy>=1.14.0",
]
